--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
     <developer>
       <name>lansheng228</name>
       <email>lansheng228@gmail.com</email>
+      <organization>lansheng228</organization>
+      <organizationUrl>https://github.com/lansheng228</organizationUrl>
       <roles>
         <role>developer</role>
       </roles>
@@ -41,12 +43,11 @@
 
   <distributionManagement>
     <snapshotRepository>
-      <id>ossrh</id>
+      <id>sonatype-nexus-snapshots</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
     </snapshotRepository>
     <repository>
-      <id>ossrh</id>
-      <name>Maven Central Staging Repository</name>
+      <id>sonatype-nexus-staging</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
