--- a/spring-cloud-starter-consul-cluster/pom.xml
+++ b/spring-cloud-starter-consul-cluster/pom.xml
@@ -34,6 +34,11 @@
       <artifactId>spring-cloud-consul-core</artifactId>
     </dependency>
 
+<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-consul-config</artifactId>
+		</dependency>
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-consul-discovery</artifactId>
