--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.github.lansheng228</groupId>
   <artifactId>spring-cloud-consul</artifactId>
-  <version>2.1.2.SNAPSHOT</version>
+  <version>2.1.2.RELEASE</version>
   <packaging>pom</packaging>
   <name>spring-cloud-consul</name>
   <description>spring cloud consul enhancements</description>
