--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation("org.apache.commons:commons-compress:$commonsCompressVersion")
     implementation("com.google.guava:guava:$guavaVersion")
     implementation("com.google.code.gson:gson:$gsonVersion")
+    implementation("org.apache.commons:commons-collections4:$commonsCollections4Version")
 
     implementation("javax.validation:validation-api:${validationApiVersion}")
 
