--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ swaggerVersion=2.9.2
 junitVersion=5.6.0
 commonsioVersion=2.6
 commonslang3Version=3.9
+commonsCollections4Version=4.4
 commonsbeanutilsVersion=1.9.4
 commonscodecVersion=1.14
 slf4jVersion=1.7.30
