--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,8 @@ dependencies {
 }
 
 wrapper {
-    gradleVersion = '6.2.1'
+    gradleVersion = '6.3'
+    distributionType = Wrapper.DistributionType.ALL
 }
 
 tasks.withType(JavaCompile) {
